# catalyst-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ad680c33304e_create_interviews_table.py  e3ec4945f268_create_users_table.py
app/: app.py  main.py
app/api/: health.py
app/core/: config.py  exceptions.py  lifespan.py  logging.py
app/db/: database.py  session.py
app/models/: __init__.py  base.py  enums.py  interview.py  user.py
tests/: test_health.py
