[project]
name = "catalyst-internal-developer-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.138.2",
    "loguru>=0.7.3",
    "psycopg>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
